src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>sf4twitter__Author_External_Id__c</fullName>
        <label>Author External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Username__c</fullName>
        <label>Author Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__twitterId__c</fullName>
        <externalId>true</externalId>
        <label>Conversation External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ANZ_All_open_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>CEC ANZ Queue</value>
        </filters>
        <filters>
            <field>Case_ISO_Country_Code__c</field>
            <operation>equals</operation>
            <value>AU,NZ</value>
        </filters>
        <label>CEC ANZ All open cases</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEC_Manager_ANZ</role>
            <role>CEC_User_ANZ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANZ_CEC_Automated_User</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>automated</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>ANZ CEC Automated User</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEC_Manager_ANZ</role>
            <role>CEC_User_ANZ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANZ_CEC_Spam</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Global_Reason_L3_desc__c</field>
            <operation>equals</operation>
            <value>Hang up</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>ANZ Queue</value>
        </filters>
        <label>ANZ CEC Spam</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEC_Manager_ANZ</role>
            <role>CEC_User_ANZ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANZ_My_Emails</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email ANZ,Web,Email</value>
        </filters>
        <filters>
            <field>Case_Market__c</field>
            <operation>equals</operation>
            <value>ANZ</value>
        </filters>
        <label>CEC ANZ My New Emails</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEC_Manager_ANZ</role>
            <role>CEC_User_ANZ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANZ_My_closed_cases1</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.CLOSED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Case_Market__c</field>
            <operation>equals</operation>
            <value>ANZ</value>
        </filters>
        <label>CEC ANZ My closed cases</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEC_Manager_ANZ</role>
            <role>CEC_User_ANZ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANz_My_closed_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.CLOSED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Case_ISO_Country_Code__c</field>
            <operation>equals</operation>
            <value>AU,NZ</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>spam</value>
        </filters>
        <label>CEC ANZ All closed cases</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEC_Manager_ANZ</role>
            <role>CEC_User_ANZ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_email</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Case_Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email,Web,White Mail,Email UK</value>
        </filters>
        <filters>
            <field>CASES.LAST_UPDATE_DATE_ONLY</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <filters>
            <field>Case_Market__c</field>
            <operation>notContain</operation>
            <value>India,DACH,France,Spain,Nordic,Portugal,Czech,Italy,Greece,Poland,Benelux</value>
        </filters>
        <filters>
            <field>Case_Market__c</field>
            <operation>notContain</operation>
            <value>Bosnia,Hungary,Slovakia,Baltics,Romania,Bulgaria,Serbia,Slovenia,Lanka,Croatia</value>
        </filters>
        <filters>
            <field>Case_Market__c</field>
            <operation>notContain</operation>
            <value>America,ANZ,Africa,Brazil,Philippines</value>
        </filters>
        <filters>
            <field>Case_Market__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Out of SLA</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEC_Manager_UK</role>
            <role>CEC_User_UK</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_ANZ_All_new_e_mails_assigned</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email ANZ,Email,Web</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>ANZ</value>
        </filters>
        <filters>
            <field>Case_Market__c</field>
            <operation>equals</operation>
            <value>ANZ</value>
        </filters>
        <label>CEC ANZ All new e-mails assigned</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEC_Manager_ANZ</role>
            <role>CEC_User_ANZ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_ANZ_Escalation_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>CEC ANZ Escalation Queue</label>
        <language>en_US</language>
        <queue>CEC_ANZ_Escalation_Queue</queue>
        <sharedTo>
            <role>CEC_Global_Head</role>
            <role>CEC_Manager_ANZ</role>
            <role>CEC_User_ANZ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_ANZ_New_Emails</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email ANZ,Web,Email</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>queue</value>
        </filters>
        <label>ANZ CEC New Emails</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEC_Manager_ANZ</role>
            <role>CEC_User_ANZ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_ANZ_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>CEC ANZ Round Robin Queue</label>
        <language>en_US</language>
        <queue>CEC_ANZ_Queue</queue>
        <sharedTo>
            <role>CEC_Global_Head</role>
            <role>CEC_Manager_ANZ</role>
            <role>CEC_User_ANZ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Baltics_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>CEC Baltics Queue</label>
        <language>en_US</language>
        <queue>CEC_Baltics_Queue</queue>
        <sharedTo>
            <role>CEC_Global_Head</role>
            <role>CEC_Manager_Baltics</role>
            <role>CEC_Manager_CEE</role>
            <role>CEC_Manager_Europe</role>
            <role>CEC_User_Baltics</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Bangladesh_Escalation_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>CEC Bangladesh Escalation Queue</label>
        <language>en_US</language>
        <queue>CEC_Bangladesh_Escalation_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>CEC_Global_Head</role>
            <role>CEC_Manager_Bangladesh</role>
            <role>CEC_User_Bangladesh</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Bangladesh_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>CEC Bangladesh Queue</label>
        <language>en_US</language>
        <queue>CEC_Bangladesh_Queue</queue>
        <sharedTo>
            <role>CEC_Global_Head</role>
            <role>CEC_Manager_Bangladesh</role>
            <role>CEC_User_Bangladesh</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Benelux_Backlog</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>First_Response_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Language__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>CEC Benelux queue</label>
        <language>en_US</language>
        <queue>CEC_Benelux_Queue</queue>
        <sharedTo>
            <role>CEC_Global_Head</role>
            <role>CEC_Manager_Benelux</role>
            <role>CEC_Manager_Europe</role>
            <role>CEC_Manager_HGS_Europe</role>
            <role>CEC_User_Benelux</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>None</fullName>
        <active>true</active>
        <businessProcess>Default</businessProcess>
        <label>None</label>
    </recordTypes>
    <recordTypes>
        <fullName>Spam</fullName>
        <active>true</active>
        <businessProcess>Default</businessProcess>
        <label>Spam</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CEC_Check_CV_Status</fullName>
        <active>true</active>
        <description>CEC Check CV Status is used to check if 1. Advisor has added the CV Questionaire 
2. Status is either blank/Pending Consumer Feedback(Attempt1)/Pending Consumer Feedback(Attempt2)</description>
        <errorConditionFormula>IF($Permission.CEC_User_CosmetoVigilance  &amp;&amp;   ISPICKVAL(Status , &quot;Closed&quot;) , IF( CV_Questionaire_Added__c=true  &amp;&amp;  ( ISPICKVAL(CV_Status__c, &quot;&quot;) || ISPICKVAL(CV_Status__c,&quot;Pending Consumer Feedback(Attempt1)&quot;)  || ISPICKVAL(CV_Status__c,&quot;Pending Consumer Feedback(Attempt2)&quot;)), true, false), false)</errorConditionFormula>
        <errorMessage>Case cannot be closed unless symptoms are resolved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CEC_Country_and_Verbatim_fields</fullName>
        <active>true</active>
        <description>CEC : To check country and Subject fields are mandatory</description>
        <errorConditionFormula>AND(  AccountId !=Null, PRIORVALUE(AccountId)= AccountId, OR( Subject =Null, Country__c =Null),NOT( ISPICKVAL( Status , &apos;New&apos;)), PRIORVALUE( OwnerId )= OwnerId)</errorConditionFormula>
        <errorMessage>Country and Verbatim is mandatory for this case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CEC_RetentionDetailCheck</fullName>
        <active>true</active>
        <description>CEC-Manual override reason</description>
        <errorConditionFormula>AND(  ISBLANK(Manual_Retention_Override__c) , OR(ISPICKVAL( Manual_Override_Reason__c , &apos;1-Legal&apos;),ISPICKVAL( Manual_Override_Reason__c , &apos;2-Customer Request&apos;)))</errorConditionFormula>
        <errorMessage>Please populate the &apos;Manual Retention Override&apos; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CEC_UsedProductPreviouslyCheck</fullName>
        <active>true</active>
        <description>CEC - Mandatory check for &apos;Used Product Previously&apos; field.</description>
        <errorConditionFormula>AND( Case_Market__c = &apos;North America&apos;,
ISPICKVAL( Status , &apos;Closed&apos;),
$RecordType.Name = &apos;None&apos;,CONTAINS(
Reason_L1_desc__c , &apos;Complaint&apos;),
ISPICKVAL(Used_Product_Previously__c ,&apos;&apos;)
)</errorConditionFormula>
        <errorMessage>&apos;Used Product Previously&apos; field is mandatory for Complaint cases.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_and_Reason_Code_Required</fullName>
        <active>true</active>
        <description>Makes product and reason code mandatory if Status = Closed</description>
        <errorConditionFormula>IF(ISPICKVAL(Status, &quot;Closed&quot;),

OR(
ISBLANK(Product_Code__c),
ISBLANK(Reason_Code__c)

),

False)</errorConditionFormula>
        <errorMessage>You Must Select a Product Code &amp; Reason code</errorMessage>
    </validationRules>
</CustomObject>